mgr/dashboard: fix UI modal issues
- Fix bs-modal getting hidden behind navbar
- Reuse the project name for tab title
- Readonly user shows an empty space in the administration dropdown
- Physical Disks Identify modal not opening up
   - add e2e in cephadm to make sure the modal always comes up
- Primary action doesn't need to be displayed for the read-only user

Fixes: https://tracker.ceph.com/issues/67547

--- a/src/pybind/mgr/dashboard/frontend/src/styles/ceph-custom/_forms.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/styles/ceph-custom/_forms.scss
@@ -53,12 +53,22 @@
   @extend .cd-col-form-input;
 }
 
+// Until all the modals are converted to carbon
+// need to keep this so that modals won't get hidden
+// behind nav bar
+ngb-modal-window {
+  .modal-dialog {
+    margin-top: 3rem;
+  }
+}
+
 cd-modal {
   .modal {
     /* stylelint-disable */
     background-color: rgba(0, 0, 0, 0.4);
     /* stylelint-enable */
     display: block;
+    margin-top: 3rem;
   }
 
   .modal-dialog {
